src/components/styles/About.css
.about-section {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  width: 100%;
  padding: 80px 20px;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
}

.about-me {
  width: 100%;
  max-width: 600px;
  text-align: center;
  z-index: 10;
}

.about-me h3 {
  font-size: 25px;
  text-transform: uppercase;
  letter-spacing: 7px;
  font-weight: 400;
  color: var(--accentColor);
}

.about-me p {
  font-size: 18px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.3px;
  margin: 0;
  word-wrap: break-word;
  color: #eee;
}

@media only screen and (min-width: 768px) {
  .about-me p {
    font-size: 28px;
    line-height: 1.4;
  }
  .about-me {
    max-width: 800px;
  }
}

@media only screen and (min-width: 1200px) {
  .about-me {
    text-align: left;
    max-width: 800px;
  }
  .about-section {
    justify-content: flex-start;
    padding-left: 10%;
  }
}
@media only screen and (min-width: 1025px) {
  .about-section {
    width: var(--cWidth);
    justify-content: right;
    max-width: 1920px;
    height: var(--vh);
    padding: 0px;
    opacity: 1;
  }
  .about-me {
    padding: 0px;
    width: 50%;
  }
  .about-me p {
    font-size: 1.9vw;
    line-height: 2.3vw;
  }
}
@media only screen and (min-width: 1950px) {
  .about-me p {
    font-size: 2.5rem;
    line-height: 2.7rem;
  }
}

